[package]
name = "wgpu-experiments"
version = "0.1.0"
authors = ["Willem Verstraeten <willem.verstraeten@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.23"
wgpu = "*"
futures = "0.3"
imgui = "*"
imgui-wgpu = "*"

[dependencies.imgui-winit-support]
version = "*"
default-features = false
features = ["winit-23"]

[patch.crates-io]
imgui = {git = "https://github.com/Gekkio/imgui-rs", branch = "master"}
imgui-wgpu = { git = "https://github.com/Yatekii/imgui-wgpu-rs", branch = "master"}
imgui-winit-support = {git = "https://github.com/Gekkio/imgui-rs", branch = "master"}