[package]
name = "wgpu-experiments"
version = "0.1.0"
authors = ["Willem Verstraeten <willem.verstraeten@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.23"
wgpu = "*"
futures = "0.3"
imgui = "*"
imgui-wgpu = "*"
shaderc = "*"

[dependencies.bytemuck]
version = "*"

[dependencies.imgui-winit-support]
version = "*"
default-features = false
features = ["winit-23"]